# yolo_nas_cpp_ros2

./: LICENSE  README.md
model/: export.py
yolo_nas_cpp/: CMakeLists.txt  package.xml
yolo_nas_cpp/include/yolo_nas_cpp/: coco_labels.hpp  color.hpp  processing.hpp  utils.hpp  yolo_nas.hpp
yolo_nas_cpp/src/: processing.cpp  utils.cpp  yolo_nas.cpp
yolo_nas_cpp_node/: CMakeLists.txt  package.xml
yolo_nas_cpp_node/include/yolo_nas_cpp_node/: yolo_nas_cpp_node.hpp
yolo_nas_cpp_node/launch/: yolo_nas_node.launch.py
yolo_nas_cpp_node/src/: yolo_nas_cpp_node.cpp
yolo_nas_param/: CMakeLists.txt  package.xml
yolo_nas_param/src/: yolo_nas_parameters.yaml
