<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_nas_cpp_node</name>
  <version>0.0.1</version>
  <description>The yolo_nas_cpp_node package</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache-2.0 License</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>bboxes_ex_msgs</depend>
  <depend>yolo_nas_cpp</depend>
  <depend>yolo_nas_param</depend>
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>